# Gamma-Pareto-Mixture

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg  standalone_test.py
.github/workflows/: publish.yml
src/GaPaDist/: __init__.py  core.py
test_gamma_pareto/: conftest.py  test_distribution.py  test_edge_cases.py  test_plots.py
tests/: __init__.py  run_tests.py  test_examples.py  test_fitting.py  test_simulation.py
