[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gamma-pareto-mixture"
description = "Gamma-Pareto Distribution for modeling heavy-tailed data"
readme = "README.md"
authors = [
    {name = "Ubeydullah Ozcan", email = "ozcanubey.dev@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["statistics", "distribution", "gamma", "pareto", "mixture", "heavy-tailed", "probability"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "polars>=0.17.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ozcanubey-dev/gamma-pareto-mixture"
Repository = "https://github.com/ozcanubey-dev/gamma-pareto-mixture"
#Documentation = "https://gamma-pareto-mixture.readthedocs.io/"
Issues = "https://github.com/ozcanubey-dev/gamma-pareto-mixture/issues"
Changelog = "https://github.com/ozcanubey-dev/gamma-pareto-mixture/releases"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "numpydoc>=1.0.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["gamma_pareto"]

[tool.hatch.build.hooks.vcs]
version-file = "GaPaDist/__init__.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
"test_*.py" = ["S101"]  # use of assert in tests