[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[project]
name = "gamma-pareto-mixture"
version = "1.0.0"
authors = [
  { name="Ubeydullah Ozcan", email="ozcanubey.dev@gmail.com" },
]
description = "Gamma Pareto Mixture Disctribution"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "polars>=0.17.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
